--- a/src/test/resources/routes.properties
+++ b/src/test/resources/routes.properties
@@ -1,11 +1,11 @@
 #Spotify modules
 
 #Authentication data
-client_id=<your client id>
-client_secret=<your client secret>
-redirect_uri=<Your Redirect UIR>
+client_id=<your client_id>
+client_secret=<your client_secret>
+redirect_uri=<your redirect_uri>
 scope=playlist-read-private playlist-modify-private playlist-read-collaborative playlist-modify-public
-user_name=<your userName>
+user_name=<your user_name>
 password=<your password>
 
 
